<?xml version="1.0"?>
<package format="2">
  <name>test_one</name>
  <version>0.0.0</version>
  <description>The test_one package</description>

  <maintainer email="ipa-kut@todo.todo">ipa-kut</maintainer>

  <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
